# DMHKontaktApp

./: .gitignore  CORREÇOES SUGERIDA SR. JUDITH.txt  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
docs/: power-automate-migration-capture.md
outlook-profile-reader/: Cargo.toml
outlook-profile-reader/src/: main.rs
scripts/: IMAP-Migration-CSV-exportieren.cmd  build-outlook-helpers.ps1  export-migration-credentials.ps1  open-tauri-dev.ps1  setup-migration-admin-key.ps1
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  migration-public-key.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: desktop.ini  icon.icns
src-tauri/src/: lib.rs  mail_accounts.rs  main.rs  thunderbird.rs  vault.rs
src/components/: AdvancedSubtabs.tsx  AppLockScreen.tsx  AppearanceSettings.tsx  CalendarEventForm.tsx  ContactForm.tsx  ContactTable.tsx  MigrationCaptureDialog.tsx  OutlookContactImportDialog.tsx  SettingsSubtabs.tsx  Sidebar.tsx  StatusMessage.tsx  UpdateNotifier.tsx
src/db/: schema.ts
src/i18n/: de.ts  index.ts
src/pages/: AppearancePage.tsx  BackupPage.tsx  CalendarPage.tsx  ContactsPage.tsx  ExportPage.tsx  GroupsPage.tsx  ImportPage.tsx  PasswordsPage.tsx  SettingsPage.tsx  SimpleImportPage.tsx  TrashPage.tsx  WelcomePage.tsx
src/services/: db.ts
src/types/: calendar.ts  contact.ts  mail.ts  vault.ts
src/utils/: calendar.ts  contact.ts  exporters.ts  importers.ts  theme.ts  validation.ts
