[package]
name = "agendakontakte"
version = "0.0.12"
description = "AgendaKontakte"
authors = ["Diakonissenmutterhaus Aidlingen e.V."]
edition = "2021"

[lib]
name = "agendakontakte_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
aes-gcm = "0.10"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
rsa = "0.9"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = { version = "0.10", features = ["oid"] }
tauri = { version = "2.5.0", features = [] }
tauri-plugin-clipboard-manager = "2.2.2"
tauri-plugin-dialog = "2.2.2"
tauri-plugin-fs = "2.2.2"
tauri-plugin-opener = "2.2.6"
tauri-plugin-updater = "2.10.1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
zeroize = "1"
